# StanfordLib-CUHKSZ

./: .gitmodules  CMakeLists.txt  README.md  appvayor.yml  appveyor.yml  generate-linux-static.sh  generate-linux.sh  generate-mac-static.sh  generate-mac.sh  generate-win-static.sh  generate-win.sh  generate.ps1  generate.sh  template  template-static
.circleci/: config.yml
StanfordCPPLib/: images.qrc  macro.h
StanfordCPPLib/autograder/: assertions.h  autograder.cpp  autograder.h  autogradercompat.h  autogradermainwrapper.cpp  autogradertest.cpp  autogradertest.h  consoleautograder.cpp  consoleautograder.h  date.cpp  gtest-all.cpp  gtest-marty.h  guiautograder.cpp  guiautograder.h  stylecheck.cpp  testresultprinter.cpp  testresultprinter.h  unittestdetails.h
StanfordCPPLib/collections/: basicgraph.cpp  basicgraph.h  collections.cpp  collections.h  dawglexicon.cpp  dawglexicon.h  deque.h  functional.h  graph.h  grid.h  gridlocation.cpp  gridlocation.h  hashcode.cpp  hashcode.h  hashmap.h  hashset.h  lexicon.cpp  lexicon.h  linkedlist.h  map.h  priorityqueue.h  queue.h  set.h  shuffle.h  sparsegrid.h  stack.h  stl.cpp  stl.h  vector.h
StanfordCPPLib/console/: console.cpp  console.h  consolestreambuf.h  consoletext.h  echoinputstreambuf.h  forwardingstreambuf.h  gconsolewindow.cpp  gconsolewindow.h  ioutils.cpp  ioutils.h  limitoutputstreambuf.h  plainconsole.cpp  plainconsole.h
StanfordCPPLib/graphics/: gbrowserpane.cpp  gbrowserpane.h  gbutton.cpp  gbutton.h  gcanvas.cpp  gcanvas.h  gcheckbox.cpp  gcheckbox.h  gchooser.cpp  gchooser.h  gclipboard.cpp  gclipboard.h  gcolor.cpp  gcolor.h  gcolorchooser.cpp  gcolorchooser.h  gcontainer.cpp  gcontainer.h  gdiffgui.cpp  gdiffgui.h  gdiffimage.cpp  gdiffimage.h  gdownloader.cpp  gdownloader.h  gdrawingsurface.cpp  gdrawingsurface.h  gevent.cpp  gevent.h  geventqueue.cpp  geventqueue.h  gfilechooser.cpp  gfilechooser.h  gfont.cpp  gfont.h  gfontchooser.cpp  gfontchooser.h  ginputpanel.cpp  ginputpanel.h  ginteractor.cpp  ginteractor.h  (+36 more)
StanfordCPPLib/io/: filelib.cpp  filelib.h  rapidxml.h  server.cpp  server.h  simpio.cpp  simpio.h  tokenscanner.cpp  tokenscanner.h  urlstream.cpp  urlstream.h  xmlutils.cpp  xmlutils.h
StanfordCPPLib/private/: compiler.h  filelibunix.cpp  filelibwindows.cpp  init.cpp  init.h  mainwrapper.cpp  mainwrapper.h  randompatch.h  version.cpp  version.h
StanfordCPPLib/sync/: lock_api.h  mutex.h  queue.h  rw_lock.h  utils.cpp  utils.h
StanfordCPPLib/system/: call_stack.h  call_stack_gcc.cpp  call_stack_windows.cpp  error.cpp  error.h  exceptions.cpp  exceptions.h  os.cpp
StanfordCPPLib/util/: diff.cpp  diff.h  direction.cpp  direction.h  gmath.cpp  gmath.h  managed.h  memory.cpp  memory.h  observable.h  point.cpp  point.h  random.cpp  random.h  recursion.cpp  recursion.h  regexpr.cpp  regexpr.h  require.cpp  require.h  sound.cpp  sound.h  stringutils.cpp  stringutils.h  strlib.cpp  strlib.h  timer.cpp  timer.h
libbook/: README.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
libbook/TeX_files/: chapter01.aux  chapter01.tex  chapter02.aux
misc/: generate-linux-static.sh  generate-linux.sh  generate-mac-static.sh  generate-mac.sh  generate-win-static.sh  generate-win.sh  lib-static.conf  template-static.qmake  template.qmake  test-nox.sh  test.sh
src/: hello.cpp  hello.h
tests/: test_header.h  test_strlib.cpp  tests.cmake
tests/collections/: test_vector.cpp
tests/sync/: test_locks.cpp  test_queue.cpp
tests/util/: test_strlib.cpp
